<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:background="@color/md_blue_grey_50"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">

    <CheckBox
        android:id="@+id/chkDelMsgBlackWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/check_delMsgBlackWords" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_weight="0"
        android:text="@string/title_list_of_banned_words"

        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/edtBlacklistWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:gravity="top|left"
        android:hint="@string/hint_blackwords"
        android:maxLines="9"
        android:minLines="3" />

    <CheckBox
        android:id="@+id/chkBanForWordBlackList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/check_BanForWordBlackList" />

    <LinearLayout
        android:id="@+id/layerBanForBlackWord"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp">

        <CheckBox
            android:id="@+id/chkAlertOnBlackWordBan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/chtTitleAlertOnBlackWordBan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_allow_count"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvBanWordsAllowCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="4dp"
                android:text="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text_clickable"
                android:textStyle="bold" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chkWarnBeforeBanWord"
                android:checked="false"
                android:id="@+id/chkWarnBeforeBanWord" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_banwords_warntext"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="visible" />

            <EditText android:hint="@string/warntext_banword_last"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"  android:gravity="top|left"
                android:id="@+id/edtBanWordWarnText"
                android:nestedScrollingEnabled="false"
                android:maxLines="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/title_ban_age"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/edtBlackWordBanAgeVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:text="5" />

            <Spinner
                android:id="@+id/spinnerBanBlackWordAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/chkReturnOnBlackWordUnban"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/check_return_after_bantime_expired" />
    </LinearLayout>


</LinearLayout>
