<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/dummyFocus"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:focusable="true" android:focusableInTouchMode="true">
                <requestFocus/>
            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_note_ban_simple_groups"
                android:id="@+id/textViewDescriptionNonSuperGroupBan" />

            <EditText android:hint="@string/ban_reason"
                android:maxLines="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtBanText" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chkSendBanReasonToChat"
                android:id="@+id/chkPublishBanReason"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectBanForever"
                android:id="@+id/rbBanForever"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectBanTemporary"
                android:id="@+id/rbBanTime"
                android:checked="false" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/layerTimebanOptions"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_ban_period"
                    android:id="@+id/textView2" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_ban_time_prefix"
                        android:id="@+id/textView4"
                        android:layout_marginRight="4dp" />

                    <Button style="@style/MyButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1 час"
                        android:textAllCaps="false"
                        android:id="@+id/btnSetValue" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_unban_time"
                    android:id="@+id/textView3"
                    android:layout_marginTop="8dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button style="@style/MyButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="12:12"
                        android:id="@+id/btnBanSelectTime"
                        android:layout_marginRight="6dp" />

                    <Button style="@style/MyButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="12/12/2015"
                        android:id="@+id/btnBanSelectDate" />
                </LinearLayout>

            </LinearLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_return_after_bantime_expired"
                android:id="@+id/chkBanReturnToChat"
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/ban_soft_hint"
                android:id="@+id/textView" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>