<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_task_mute_users"
        android:textColor="@color/md_blue_600"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/chkEnableMuteUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_enabled" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_select_users_to_mute" />

    <LinearLayout
        android:id="@+id/layerClickOpenMuted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/profile_list" />

        <TextView
            android:id="@+id/tvMutedUsersCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_weight="0"


            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="Users not selected"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/md_teal_500" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/chkMuteAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chkMuteAllMembers"
        android:layout_marginLeft="16dp" />

    <CheckBox
        android:id="@+id/chkMuteJoined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chkMuteJoinedMembers"
        android:layout_marginLeft="16dp" />


</LinearLayout>
